feat: add framer-motion and recharts dependencies; implement admin and user dashboards with role-based redirection
refactor: rename loading state in AuthProvider for clarity; remove unused LogOutModal component

feat: create Loader component with animations; add UnderConstruction component for dashboard

feat: implement Overview component in AdminDashboard with user statistics and activity chart

feat: create UserDashboard component; add useUserRole hook for fetching user roles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       rel="stylesheet"
     />
 
+    <!-- Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-843B6T2X1H");
+    </script>
+
     <title>Seerah of Prophet Muhammad</title>
   </head>
   <body>
